kubernetes/readest-hardcover-sync/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: readest-hardcover-sync
  annotations:
    reloader.stakater.com/auto: 'true'

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: readest-hardcover-sync
      app.kubernetes.io/instance: readest-hardcover-sync
  template:
    metadata:
      name: readest-hardcover-sync
      labels:
        app.kubernetes.io/name: readest-hardcover-sync
        app.kubernetes.io/instance: readest-hardcover-sync
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: readest-hardcover-sync
        image: ghcr.io/claytono/readest-hardcover-sync:edge
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: readest-hardcover-sync-data
